api/api_names-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-names
  labels:
    app: api-names
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-names
  template:
    metadata:
      labels:
        app: api-names
    spec:
      containers:
      - name: api-names
        image: juanmigueld/api_names:1.3
        ports:
        - containerPort: 8080
