api/api_names-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api-names
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
